--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>SSR Submissions</title>
 </head>
 <body>
-    <iframe style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" src="https://script.google.com/macros/s/AKfycbxsyXOcLWjhDJ1XRbSeJTPRoJp048tCMgCmAW4pUp7fmFN2m9mN0zO-SD7IdpJQuwoFqg/exec" frameborder="0" method="POST"></iframe>
+    <iframe style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" src="https://script.google.com/macros/s/AKfycbxsyXOcLWjhDJ1XRbSeJTPRoJp048tCMgCmAW4pUp7fmFN2m9mN0zO-SD7IdpJQuwoFqg/exec" frameborder="0"></iframe>
 </body>
 </html>
